Rearrange sections in index.html

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet" />
 
-    <title>Pure CV</title>
-    <meta name="description" content="A clean online résumé (CV)">
-    <meta name="keywords" content="Pure CV">
+    <title>Neesha Mehta</title>
+    <meta name="description" content="Neesha Mehta résumé (CV)">
+    <meta name="keywords" content="CV">
     <meta name="author" content="Neesha Mehta">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-12/css/all.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" />
@@ -27,17 +27,17 @@
                 <header>
                     <div class="profile">
                         <div class="picture">
-                            <img src="img/avatar.jpg" alt="Neesha Mehta">
+                            <img src="img/neeshsa.jpg" alt="Neesha Mehta">
                         </div>
                         <a class="btn btn-cv" href="#" role="button" download>
                             <i class="fas fa-file-alt"></i> Download Résumé
                         </a>
                         <h1>Neesha Mehta</h1>
-                        <span>Director of Strategic Partnerships</span>
+                        <span>Strategic Partnerships | Corporate Strategy | Business Developement</span>
                     </div>
                     <ul class="social">
                         <li><i class="fas fa-envelope"></i> <span id="email"><a href="mailto:Neesha.Mehta1@gmail.com">Neesha.Mehta1@gmail.com</a></span></li>
-                        <li><i class="fab fa-linkedin"></i> <a href="#">LinkedIn Profile</a></li>
+                        <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/neesha-mehta-981a7a66/">LinkedIn Profile</a></li>
                     </ul>
 
                     <p>Driving Growth and Innovation through Strategic Partnerships: Transforming Vision into Value.</p>
@@ -46,6 +46,47 @@
 
             <div class="col-lg-8 right-side">
                 <article>
+
+                    <section>
+                        <h2 class="section-title">
+                            <span class="fa-stack fa-xs">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
+                            </span>
+                            Education
+                        </h2>
+
+                        <div class="education-block">
+                            <h3>University of San Francisco, San Francisco, CA</h3>
+                            <div class="education-time"> MBA  – Expected graduation (Spring 2025)</div>
+                        </div>
+
+                        <div class="education-block">
+                            <h3>University of California, Santa Cruz, CA</h3>
+                            <div class="education-time">B.S. in Cognitive Science and Minor in Evolutionary Biology </div>
+                            <p>Indian Student Association Board Member (ISA Board Member) </p>
+                        </div>
+                    </section>
+
+                    <section>
+                        <h2 class="section-title">
+                            <span class="fa-stack fa-xs">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fas fa-certificate fa-stack-1x fa-inverse"></i>
+                            </span>
+                            Training
+                        </h2>
+
+                        <ul>
+                            <li>McKinsey Asian Management Accelerator Program (2023)</li>
+                            <li>LinkedIn Learning – Taking Charge of Your Career (2023)</li>
+                            <li>Grace Hopper 2023, Attendee from Albertsons</li>
+                            <li>Chair of WIIN Pleasanton ARG at Albertsons (Women's Inclusion & Inspiration Network)</li>
+                            <li>APEX Training – Healthcare Management Systems (2015)</li>
+                            <li>U.C. Santa Cruz – Undergraduate Teaching Assistant Training (2012)</li>
+                        </ul>
+                    </section>
+                    
                     <section>
                         <h2 class="section-title">
                             <span class="fa-stack fa-xs">
@@ -146,52 +187,6 @@
                             </div>
                             <div class="job-title">Teaching Assistant</div>
                         </div>
-                    </section>
-
-                    <section>
-                        <h2 class="section-title">
-                            <span class="fa-stack fa-xs">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
-                            </span>
-                            Education
-                        </h2>
-
-                        <div class="education-block">
-                            <h3>University of San Francisco, San Francisco, CA</h3>
-                            <div class="education-time">PT, MBA with Entrepreneurship concentration (Currently on 4.0 GPA) – Expected graduation (Spring 2025)</div>
-                        </div>
-
-                        <div class="education-block">
-                            <h3>University of California, San Francisco, CA</h3>
-                            <div class="education-time">M.S. Health Policy and Law at UCSF and UC Hasting Consortium – Online (2017)</div>
-                            <p>Did not complete: Transitioned to a career in Tech Operations, reflecting a shift in professional interests and goals</p>
-                        </div>
-
-                        <div class="education-block">
-                            <h3>University of California, Santa Cruz, CA</h3>
-                            <div class="education-time">B.S. in Cognitive Science and Minor in Evolutionary Biology (2016)</div>
-                            <p>Indian Student Association Board Member (ISA Board Member (2012-2015))</p>
-                        </div>
-                    </section>
-
-                    <section>
-                        <h2 class="section-title">
-                            <span class="fa-stack fa-xs">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fas fa-certificate fa-stack-1x fa-inverse"></i>
-                            </span>
-                            Training
-                        </h2>
-
-                        <ul>
-                            <li>McKinsey Asian Management Accelerator Program (2023)</li>
-                            <li>LinkedIn Learning – Taking Charge of Your Career (2023)</li>
-                            <li>Grace Hopper 2023, Attendee from Albertsons</li>
-                            <li>Chair of WIIN Pleasanton ARG at Albertsons (Women's Inclusion & Inspiration Network)</li>
-                            <li>APEX Training – Healthcare Management Systems (2015)</li>
-                            <li>U.C. Santa Cruz – Undergraduate Teaching Assistant Training (2012)</li>
-                        </ul>
                     </section>
 
                     <section>
