--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <header>
                     <div class="profile">
                         <div class="picture">
-                            <img src="img/neeshsa.jpg" alt="Neesha Mehta">
+                            <img src="img/neesha.jpg" alt="Neesha Mehta">
                         </div>
                         <a class="btn btn-cv" href="#" role="button" download>
                             <i class="fas fa-file-alt"></i> Download Résumé
@@ -57,14 +57,18 @@
                         </h2>
 
                         <div class="education-block">
-                            <h3>University of San Francisco, San Francisco, CA</h3>
-                            <div class="education-time"> MBA  – Expected graduation (Spring 2025)</div>
+                            <div class="upper-row">
+                                <h3>University of San Francisco, San Francisco, CA</h3>
+                                <div class="education-time"> MBA  – Expected graduation (Spring 2025)</div>
+                            </div>
                         </div>
 
                         <div class="education-block">
-                            <h3>University of California, Santa Cruz, CA</h3>
-                            <div class="education-time">B.S. in Cognitive Science and Minor in Evolutionary Biology </div>
-                            <p>Indian Student Association Board Member (ISA Board Member) </p>
+                            <div class="upper-row">
+                                <h3>University of California, Santa Cruz, CA</h3>
+                                <div class="education-time">B.S. in Cognitive Science and Minor in Evolutionary Biology </div>
+                                <p>Indian Student Association Board Member (ISA Board Member) </p>
+                            </div>
                         </div>
                     </section>
 
