--- a/index.html
+++ b/index.html
@@ -57,18 +57,14 @@
                         </h2>
 
                         <div class="education-block">
-                            <div class="upper-row">
-                                <h3>University of San Francisco, San Francisco, CA</h3>
-                                <div class="education-time"> MBA  – Expected graduation (Spring 2025)</div>
-                            </div>
+                            <h3 class="university">University of San Francisco, San Francisco, CA</h3>
+                            <div class="education-time"> MBA  – Expected graduation (Spring 2025)</div>
                         </div>
 
                         <div class="education-block">
-                            <div class="upper-row">
-                                <h3>University of California, Santa Cruz, CA</h3>
-                                <div class="education-time">B.S. in Cognitive Science and Minor in Evolutionary Biology </div>
-                                <p>Indian Student Association Board Member (ISA Board Member) </p>
-                            </div>
+                            <h3 class="university">University of California, Santa Cruz, CA</h3>
+                            <div class="education-time">B.S. in Cognitive Science and Minor in Evolutionary Biology </div>
+                            <p>Indian Student Association Board Member (ISA Board Member) </p>
                         </div>
                     </section>
 
