--- a/index.html
+++ b/index.html
@@ -56,18 +56,17 @@
                             Education
                         </h2>
 
-                        <div class="education-block">
+                        <div class="school">
                             <div class="upper-row">
-                                <h3 class="university">University of San Francisco, San Francisco, CA</h3>
-                                <div class="education-time"> MBA  – Expected graduation (Spring 2025)</div>
+                                <h3 class="school-name">University of San Francisco, San Francisco, CA</h3>
+                                <div class="school-time"> Masters of Business Administration Expected graduation '25</div>
                             </div>
                         </div>
 
-                        <div class="education-block">
+                        <div class="school">
                             <div class="upper-row">
-                                <h3 class="university">University of California, Santa Cruz, CA</h3>
-                                <div class="education-time">B.S. in Cognitive Science and Minor in Evolutionary Biology </div>
-                                <p>Indian Student Association Board Member (ISA Board Member) </p>
+                                <h3 class="school-name">University of California, Santa Cruz, CA</h3>
+                                <div class="school-time">Bachelors of Science in Cognitive Science and Minor in Evolutionary Biology </div>
                             </div>
                         </div>
                     </section>
