--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <div class="school">
                             <div class="upper-row">
                                 <h3 class="school-name">University of San Francisco, San Francisco, CA</h3>
-                                <div class="school-time"> Masters of Business Administration Expected graduation '25</div>
+                                <div class="school-time"> Masters of Business Administration | Expected Graduation '25</div>
                             </div>
                         </div>
 
